# Robotics_Cape

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flyMS_build.sh  install.sh  kill_flight_program.sh  run_flight_program.sh  sshd_config  uninstall.sh  wifi.config
cmake/: px4_add_library.cmake  toolchain.cmake
config/: .gitignore  flyMSConfig.yaml  flyMSConfig.yaml_dji_450  flyMSConfig_dji_450.yaml  params.yaml
examples/flyMS/: CMakeLists.txt  Makefile  read_data.m
examples/flyMS/src/: config.c  config.h  dsm2MS.c  ekf.cpp  flyMS.c  flyMS.h  gps.c  kalman.c  linear_algebra.h  linear_algebraMS.c  logger.c  logger.h  misc_functions.c
examples/flyMSold/: Makefile
examples/flyMSold/src/: dsm2MS.c  flyMS.c  gps.c  kalman.c  kalman.h  linear_algebra.h
examples/pru_handler/: Makefile
examples/pru_handler/src/: pru_handler.c
examples/rc_calibrate_escs/: rc_calibrate_escs.c
examples/rc_test_servos/: rc_test_servos.c
examples/test_client/src/: client.c
install/start_scripts/: flyMS.service  init_start_script.sh  pruHandler.service  start_flyMS.service
lib/filter/: CMakeLists.txt  filter.c  filter.h
lib/robotics_cape/: CMakeLists.txt  roboticscape.h
lib/robotics_cape/mpu9250/: rc_mpu9250.c
lib/robotics_cape/other/: rc_other.c  rc_pru.c
lib/yaml-cpp/: .gitignore  CMakeLists.txt
libraries/: CMakeLists.txt  Makefile  pru_handler_client.c  pru_handler_client.h  roboticscape.c
libraries/mpu9250/: rc_mpu9250.c
src/cape_archive/rc_version/: .rc_version_batt_test.c
src/cape_archive/test_client/: Makefile
src/do_nothing/: CMakeLists.txt  do_nothing.c
src/flyMS/: CMakeLists.txt  config.c  config.h  ekf.cpp  ekf2.h  flyMS.c  flyMS.h  flyMS_common.h  gps.c  imu_handler.c  imu_handler.h  kalman.c  linear_algebra.h  linear_algebraMS.c  logger.c  logger.h  misc_functions.c  navigation.cpp
src/flyMS/inc/: flyMS.h  flyMS.hpp  flyMS_common.h  gps.h  imu_handler.h  logger.h  pruClient.hpp  setpoint.h
src/flyMS/inc/C/: config.h  flyMS.h  flyMS_common.h  imu_handler.h  logger.h  setpoint.h
src/flyMS/inc/Cpp/: common.hpp  config.hpp  ekf.hpp  flyMS.hpp  gps.hpp  imu.hpp  logger.hpp  pruClient.hpp  setpoint.hpp
src/flyMS/include/flyMS/: common.hpp  config.hpp  ekf.hpp  flyMS.h  flyMS.hpp  flyMS_structs.h  flyMS_types.h  gps.hpp  imu.h  imu.hpp  logger.hpp  mavlink_interface.h  position_controller.h  position_generator.h  pruClient.h  pruClient.hpp  ready_check.h  setpoint.h  setpoint.hpp
src/flyMS/include/flyMS/imu/: base.h  dmp.h
src/flyMS/include/flyMS/types/: flight_filters.h  state_data.h  vio_data.h
src/flyMS/include/flyMS/ulog/: ulog.h
src/flyMS/post_procees/: read_data.m
src/flyMS/post_process/: read_data.m
src/flyMS/src/: common.hpp  config.c  config.cpp  config.hpp  ekf.cpp  ekf.hpp  filter.c  flyMS.c  flyMS.cc  flyMS.cpp  flyMS.h  flyMS.hpp  flyMSApp.cc  flyMSApp.cpp  gps.c  gps.cc  gps.cpp  gps.h  gps.hpp  imu.cc  imu.cpp  imu.hpp  imu_handler.c  kalman.h  logger.c  logger.cpp  logger.hpp  mavlink_interface.cc  misc_functions.c  position_controller.cc  pruClient.cc  pruClient.cpp  pruClient.hpp  ready_check.cc  setpoint.c  setpoint.cc  setpoint.cpp  setpoint.hpp  startupRoutine.cpp
src/flyMS/src/C/: ekf.cpp  flyMS.c  gps.c  imu_handler.c  setpoint.c
src/flyMS/src/Cpp/: config.cpp  ekf.cpp  flyMS.cpp  flyMSApp.cpp  gps.cpp  imu.cpp  logger.cpp  pruClient.cpp  setpoint.cpp  startupRoutine.cpp
src/flyMS/src/imu/: base.cc  dmp.cc
src/flyMS/src/ulog/: ulog.cc
src/flyMS/test/: replayFlight.cpp
src/pru_handler/: CMakeLists.txt  pruHandler.cpp  pruHandler.hpp  pruHandlerApp.cpp  pru_handler.c
src/rc_calibrate_dsm/: CMakeLists.txt  rc_calibrate_dsm.c
src/rc_calibrate_escs/: CMakeLists.txt  rc_calibrate_escs.c
src/rc_calibrate_gyro/: CMakeLists.txt  rc_calibrate_gyro.c
src/rc_calibrate_mag/: CMakeLists.txt  rc_calibrate_mag.c
src/rc_test_barometer/: CMakeLists.txt  rc_test_barometer.c
src/rc_test_dmp/: CMakeLists.txt  rc_test_dmp.c
src/rc_test_dsm/: CMakeLists.txt  rc_test_dsm.c
src/rc_test_fusion/: CMakeLists.txt  rc_test_fusion.c  tmp.m
src/rc_test_imu/: CMakeLists.txt  rc_test_imu.c
start_scripts/: eigen-eigen-5a0156e40feb.tar.bz2  init_start_script.sh  restart_pru.sh  start_pru_handler
